logs/logtools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/acora'...
Listing './lib/python3.5/site-packages/acora-2.1.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/logtools'...
Compiling './lib/python3.5/site-packages/logtools/_filter.py'...
***   File "./lib/python3.5/site-packages/logtools/_filter.py", line 228
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/logtools/_filterbots.py'...
***   File "./lib/python3.5/site-packages/logtools/_filterbots.py", line 241
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/logtools/_flattenjson.py'...
***   File "./lib/python3.5/site-packages/logtools/_flattenjson.py", line 56
    print row.encode('utf-8', 'ignore')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logtools/_geoip.py'...
***   File "./lib/python3.5/site-packages/logtools/_geoip.py", line 95
    print "{0}\t{1}".format(geocode, line)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logtools/_merge.py'...
***   File "./lib/python3.5/site-packages/logtools/_merge.py", line 110
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/logtools/_parse.py'...
***   File "./lib/python3.5/site-packages/logtools/_parse.py", line 99
    except KeyError, exc:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logtools/_sample.py'...
***   File "./lib/python3.5/site-packages/logtools/_sample.py", line 120
    print r
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/logtools/_sumstat.py'...
***   File "./lib/python3.5/site-packages/logtools/_sumstat.py", line 154
    print "10%% of Sample Volume is encompassed within the top %s (%.4f%%) sample values" % \
                                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/logtools/_tail.py'...
***   File "./lib/python3.5/site-packages/logtools/_tail.py", line 149
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/logtools/_urlparse.py'...
***   File "./lib/python3.5/site-packages/logtools/_urlparse.py", line 98
    print parsed_url
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/logtools/parsers.py'...
***   File "./lib/python3.5/site-packages/logtools/parsers.py", line 179
    except AttributeError, exc:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/logtools/test'...
Listing './lib/python3.5/site-packages/logtools-0.8.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/sqlsoup-0.9.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
